--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 ###### Requirements without Version Specifiers ######
 matplotlib
+seaborn
+datetime
+numpy
+pickle
 
 ###### Requirements with Version Specifiers ######
 pandas >= 1.3.5           
